added form for joining

--- a/views/video.ejs
+++ b/views/video.ejs
@@ -26,6 +26,15 @@
         </div>
       </div>
     </div>
+
+
+    <script>
+      const username = <%- JSON.stringify(username) %>;
+      const room = <%- JSON.stringify(room) %>;
+    </script>
+
+
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="bundle.js"></script>
   </body>
