--- a/views/video.ejs
+++ b/views/video.ejs
@@ -1,41 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Video</title>
-    <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <h1>Video Chat</h1>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video class="embed-responsive-item" muted></video>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div id="peerDiv" class="embed-responsive embed-responsive-16by9"></div>
-        </div>
-      </div>
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Video</title>
+		<!-- Latest compiled and minified CSS -->
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+			integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+			crossorigin="anonymous"
+		/>
+
+		<style>
+			#videoCall {
+				width: 800px;
+				height: 420px;
+				position: relative;
+				border: solid 1px #000;
+				margin: 50px auto;
+				background-color: rgba(0, 0, 0, 0.3);
+				overflow: hidden;
+			}
+			#videoCall .contact-name {
+				position: absolute;
+				top: 0;
+				margin-left: 15px;
+				color: #f5f5f5;
+				text-shadow: 0 1px rgba(0, 0, 0, 0.7);
+			}
+			#videoCall .remote-stream {
+				width: 100%;
+				height: 100%;
+				background: rgba(3, 33, 52, 0.7);
+				z-index: -1;
+			}
+			#videoCall .local-stream {
+				width: 25%;
+				height: 25%;
+				position: absolute;
+				z-index: 1000;
+				background: #fff;
+				border: solid 1px rgba(0, 0, 0, 0.3);
+				bottom: 0;
+				left: 40%;
+			}
+			#videoCall .controls {
+				position: absolute;
+				bottom: 0;
+				right: 0;
+				margin-right: 20px;
+				margin-bottom: 10px;
+			}
+			#videoCall .controls button {
+				border: 0 none;
+				padding: 10px 12px;
+				border-radius: 50%;
+				background-color: #f00;
+			}
+			#videoCall .controls button i {
+				color: #f5f5f5;
+			}
+			.material-icons.md-18 {
+				font-size: 18px;
+			}
+			.material-icons.md-24 {
+				font-size: 24px;
+			}
+			.material-icons.md-36 {
+				font-size: 36px;
+			}
+			.material-icons.md-48 {
+				font-size: 48px;
+			}
+		</style>
+	</head>
+	<body>
 
 
-    <script>
-      const username = <%- JSON.stringify(username) %>;
-      const room = <%- JSON.stringify(room) %>;
-    </script>
 
 
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="bundle.js"></script>
-  </body>
+    
+<div id="videoCall">
+  <div class="contact-name">
+    <h3>Partner Name</h3>
+  </div>
+  <video class="remote-stream">thier video</video>
+  <video class="local-stream">your video</video>
+  <div class="controls">
+    <button class="call-end"><i class="material-icons md-48">call_end</i></button>
+  </div>
+</div>
+
+
+
+
+		<h1>Video Chat</h1>
+
+		<div class="row">
+			<div class="col-md-12">
+				<div
+					id="peerDiv"
+					class="embed-responsive embed-responsive-16by9"
+				></div>
+			</div>
+
+			<div class="col-md-6">
+				<div class="embed-responsive embed-responsive-16by9">
+					<video class="embed-responsive-item" muted></video>
+				</div>
+			</div>
+		</div>
+
+		<script>
+			const username = <%- JSON.stringify(username) %>;
+			const room = <%- JSON.stringify(room) %>;
+		</script>
+
+		<script src="/socket.io/socket.io.js"></script>
+		<script src="bundle.js"></script>
+	</body>
 </html>
