did some changes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
 			crossorigin="anonymous"
 		></script>
 	</head>
-	<body>
+	<body style="background-color: rgb(0, 0, 0);color: white;">
 		<div class="container">
 			<h1 class="text-center" >Zilch Video</h1>
 
