--- a/views/video.ejs
+++ b/views/video.ejs
@@ -11,24 +11,22 @@
 			integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 			crossorigin="anonymous"
 		/>
+
+		<link rel="stylesheet" href="css/video.css">
+
 	</head>
-	<body style="background-color: black;">
+	<body>
 		<h1 class="text-center" id="heading">
 			Video will begin as soon as other person connects
 		</h1>
 
 		<div
 			id="drag"
-			style="
-				position: absolute;
-				width: 300px;
-				background-color: gray;
-				z-index: 99;
-			"
+			class="dragdiv"
 		>
 			<div
 				id="dragheader"
-				style="padding: 10px; background-color: aqua;"
+				class="dragMeDiv"
 			></div>
 			<div class="embed-responsive embed-responsive-16by9">
 				<video class="embed-responsive-item" muted></video>
