adding touch response

--- a/views/video.ejs
+++ b/views/video.ejs
@@ -12,22 +12,15 @@
 			crossorigin="anonymous"
 		/>
 
-		<link rel="stylesheet" href="css/video.css">
-
+		<link rel="stylesheet" href="css/video.css" />
 	</head>
 	<body>
 		<h1 class="text-center" id="heading">
 			Video will begin as soon as other person connects
 		</h1>
 
-		<div
-			id="drag"
-			class="dragdiv"
-		>
-			<div
-				id="dragheader"
-				class="dragMeDiv"
-			></div>
+		<div id="drag" class="dragdiv">
+			<div id="dragheader" class="dragMeDiv"></div>
 			<div class="embed-responsive embed-responsive-16by9">
 				<video class="embed-responsive-item" muted></video>
 			</div>
@@ -61,9 +54,13 @@
 					document.getElementById(
 						elmnt.id + "header"
 					).onmousedown = dragMouseDown;
+					document.getElementById(
+						elmnt.id + "header"
+					).ontouchstart = dragMouseDown;
 				} else {
 					/* otherwise, move the DIV from anywhere inside the DIV:*/
 					elmnt.onmousedown = dragMouseDown;
+					elmnt.ontouchstart = dragMouseDown;
 				}
 
 				function dragMouseDown(e) {
@@ -73,8 +70,10 @@
 					pos3 = e.clientX;
 					pos4 = e.clientY;
 					document.onmouseup = closeDragElement;
+					document.ontouchend = closeDragElement;
 					// call a function whenever the cursor moves:
 					document.onmousemove = elementDrag;
+					document.ontouchmove = elementDrag;
 				}
 
 				function elementDrag(e) {
@@ -97,5 +96,70 @@
 				}
 			}
 		</script>
+		<!-- <script>
+			var dragItem = document.querySelector("#dragheader");
+			var container = document.querySelector("#drag");
+
+			var active = false;
+			var currentX;
+			var currentY;
+			var initialX;
+			var initialY;
+			var xOffset = 0;
+			var yOffset = 0;
+
+			container.addEventListener("touchstart", dragStart, false);
+			container.addEventListener("touchend", dragEnd, false);
+			container.addEventListener("touchmove", drag, false);
+
+			container.addEventListener("mousedown", dragStart, false);
+			container.addEventListener("mouseup", dragEnd, false);
+			container.addEventListener("mousemove", drag, false);
+
+			function dragStart(e) {
+				if (e.type === "touchstart") {
+					initialX = e.touches[0].clientX - xOffset;
+					initialY = e.touches[0].clientY - yOffset;
+				} else {
+					initialX = e.clientX - xOffset;
+					initialY = e.clientY - yOffset;
+				}
+
+				if (e.target === dragItem) {
+					active = true;
+				}
+			}
+
+			function dragEnd(e) {
+				initialX = currentX;
+				initialY = currentY;
+
+				active = false;
+			}
+
+			function drag(e) {
+				if (active) {
+					e.preventDefault();
+
+					if (e.type === "touchmove") {
+						currentX = e.touches[0].clientX - initialX;
+						currentY = e.touches[0].clientY - initialY;
+					} else {
+						currentX = e.clientX - initialX;
+						currentY = e.clientY - initialY;
+					}
+
+					xOffset = currentX;
+					yOffset = currentY;
+
+					setTranslate(currentX, currentY, dragItem);
+				}
+			}
+
+			function setTranslate(xPos, yPos, el) {
+				el.style.transform =
+					"translate3d(" + xPos + "px, " + yPos + "px, 0)";
+			}
+		</script> -->
 	</body>
 </html>
