--- a/public/css/video.css
+++ b/public/css/video.css
@@ -13,3 +13,11 @@ body {
 	padding: 10px;
 	background-color: aqua;
 }
+
+.dragMeDiv:hover{
+    cursor: -webkit-grab; cursor: grab;
+}
+
+.dragMeDiv:active{
+    cursor: -webkit-grabbing; cursor: grabbing;
+}
