--- a/views/video.ejs
+++ b/views/video.ejs
@@ -66,9 +66,16 @@
 				function dragMouseDown(e) {
 					e = e || window.event;
 					e.preventDefault();
-					// get the mouse cursor position at startup:
-					pos3 = e.clientX;
-					pos4 = e.clientY;
+
+					if (e.type === "touchstart") {
+						pos3 = e.touches[0].clientX;
+						pos4 = e.touches[0].clientY;
+					} else {
+						// get the mouse cursor position at startup:
+						pos3 = e.clientX;
+						pos4 = e.clientY;
+					}
+
 					document.onmouseup = closeDragElement;
 					document.ontouchend = closeDragElement;
 					// call a function whenever the cursor moves:
@@ -79,11 +86,20 @@
 				function elementDrag(e) {
 					e = e || window.event;
 					e.preventDefault();
-					// calculate the new cursor position:
-					pos1 = pos3 - e.clientX;
-					pos2 = pos4 - e.clientY;
-					pos3 = e.clientX;
-					pos4 = e.clientY;
+
+					if (e.type === "touchmove") {
+						pos1 = pos3 - e.touches[0].clientX;
+						pos2 = pos4 - e.touches[0].clientY;
+						pos3 = e.touches[0].clientX;
+						pos4 = e.touches[0].clientY;
+					} else {
+						// calculate the new cursor position:
+						pos1 = pos3 - e.clientX;
+						pos2 = pos4 - e.clientY;
+						pos3 = e.clientX;
+						pos4 = e.clientY;
+					}
+
 					// set the element's new position:
 					elmnt.style.top = elmnt.offsetTop - pos2 + "px";
 					elmnt.style.left = elmnt.offsetLeft - pos1 + "px";
