--- a/views/video.ejs
+++ b/views/video.ejs
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 
-		<div style="width: 100%; height: 90%;">
+		<div class="otherVideo">
 			<div
 				id="peerDiv"
 				class="embed-responsive embed-responsive-16by9"
